# harness-agent-poc

./: .env.example  .gitignore  README.md  pyproject.toml
harness_agent/: agent.py  main.py
harness_agent/llm/: providers.py
harness_agent/middleware/: base.py  compact.py  hitl.py  memory.py
harness_agent/prompts/: system.md
harness_agent/tools/: filesystem.py
memory/: AGENTS.md
