[project]
name = "harness-agent-poc"
version = "0.1.0"
description = "A minimal Harness Agent for repo analysis using LangGraph"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "langchain>=1.2.14",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "rich>=14.3.3",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
harness-agent = "harness_agent.main:cli"

[tool.setuptools.packages.find]
include = ["harness_agent*"]
